hphp/hack/test/typecheck/test_consts11.php.exp
File "test_consts11.php", line 5, characters 7-8:
This class must be declared `abstract`, or provide an implementation for the abstract constant `X` (Typing[4047])
  File "test_consts11.php", line 5, characters 18-19:
  `C2` uses `C1`
  File "test_consts11.php", line 3, characters 18-18:
  The constant is defined here
