hphp/hack/test/typecheck/test_consts11.php
<?hh
abstract class C1 {
  abstract const X;
}
class C2 extends C1 {}
